[tool.poetry]
name = "sales-list"
version = "0.1.0"
description = ""
authors = ["nagashima-omonao <nagashima.omonao@gmail.com>"]
readme = "README.md"
packages = [{include = "sales_list"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
