[tool.poetry]
name = "sales-list"
version = "0.1.0"
description = ""
authors = ["nagashima-omonao <nagashima.omonao@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
streamlit = "^1.16.0"
pandas = "^1.5.2"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
